--- a/paludis/etc/use.conf.d/per-package.conf
+++ b/paludis/etc/use.conf.d/per-package.conf
@@ -35,7 +35,7 @@ kde-base/kdm -pam
 kde-base/kopete addbookmarks alias autoreplace connectionstatus contactnotes highlight history irc latex nowlistening sametime sms statistics texteffect
 
 mail-client/mozilla-thunderbird mozcalendar
-mail-client/mutt -berkdb -crypt -debug -doc -gdbm -gnutls -gpg -idn imap mbox nls nntp pop -qdbm -sasl -sidebar smime smtp ssl -vanilla
+mail-client/mutt -berkdb -crypt -debug -doc gdbm -gnutls -gpg -idn imap mbox nls nntp pop -qdbm -sasl -sidebar smime smtp ssl -vanilla
 media-gfx/graphviz gtk pango
 media-libs/a52dec djbfft
 media-libs/freetype kpathsea
