--- a/paludis/etc/package_mask.conf
+++ b/paludis/etc/package_mask.conf
@@ -339,4 +339,5 @@ media-sound/amarok:4.1
 =x11-base/xorg-server-1.10.3
 =x11-base/xorg-server-1.10.4
 >=x11-libs/qt-meta-4
-=x11-base/xorg-server-1.10.4-r1
+=net-im/skype-2.2.0.35-r1
+
