new masks and use flags

--- a/paludis/etc/use.conf.d/per-package.conf
+++ b/paludis/etc/use.conf.d/per-package.conf
@@ -19,7 +19,7 @@ app-text/ptex -unicode -iconv -X
 
 dev-cpp/gtkmm accessibility
 dev-vcs/git -tk -webdav -subversion -curl
-dev-lang/erlang doc smp kpoll
+dev-lang/erlang doc smp kpoll -wxwidgets
 dev-java/sun-jre-bin nsplugin
 dev-lang/perl ithreads
 dev-lang/php calendar session spl nls
@@ -42,6 +42,7 @@ media-libs/freetype kpathsea
 media-libs/gd fontconfig
 media-libs/libgphoto2 canon cameras_canon
 media-libs/libpng apng
+media-libs/mesa g3dvl
 =media-libs/phonon-4.5.0 -aqua -gstreamer -vlc xine
 media-sound/amarok -mysql mp4 real
 media-sound/alsa-utils -midi
@@ -56,7 +57,7 @@ media-gfx/picasa nsplugin
 net-analyzer/trafshow -slang
 net-analyzer/wireshark gtk pcap
 net-dialup/freeradius mysql -pam
-net-dns/bind resolvconf dlz
+net-dns/bind resolvconf dlz caps
 net-dns/dnsmasq resolvconf
 net-misc/kamailio group_standard tls kex pv siputils auth auth_db db_mysql -debug
 net-misc/ser mysql radius
@@ -72,11 +73,13 @@ net-print/cups samba
 net-proxy/squid -samba -ldap -mysql -sqlite
 net-wireless/bluez-utils -dbus udev
 >=net-wireless/bluez-utils-3.8 udev fuse glib obex
+net-wireless/wpa_supplicant -qt4 madwifi
 net-voip/sipp ssl pcap
 
 sys-apps/busybox -pam
 sys-apps/hal  -acpi -X -consolekit -crypt 
 # HAL don't like `zlib` here ;()
+sys-apps/paludis pink visibility -xml
 sys-apps/pciutils -zlib
 sys-devel/gcc doc
 sys-devel/gdb expat doc
