--- a/paludis/etc/package_mask.conf
+++ b/paludis/etc/package_mask.conf
@@ -340,4 +340,11 @@ media-sound/amarok:4.1
 =x11-base/xorg-server-1.10.4
 >=x11-libs/qt-meta-4
 =net-im/skype-2.2.0.35-r1
-
+=net-misc/icaclient-1.12
+>=sys-fs/udev-182
+=sys-auth/consolekit-0.4.5-r3
+=sys-apps/openrc-0.9.9.1
+=sys-apps/openrc-0.9.9.3
+=sys-apps/openrc-0.9.9.2
+=sys-apps/openrc-0.9.9
+=sys-apps/net-tools-1.60_p20120127084908
