add ru kbd layout and ctrl-shift switch to xorg.conf

--- a/xorg/xorg.conf
+++ b/xorg/xorg.conf
@@ -25,7 +25,8 @@ Section "InputDevice"
     Option "AutoRepeat" "500 30"
     Option "XkbRules"	"xorg"
     Option "XkbModel"	"pc105"
-    Option "XkbLayout"	"us"
+    Option "XkbLayout"	"us,ru"
+    Option "XkbOptions" "grp:ctrl_shift_toggle,grp_led:scroll"
 EndSection
 
 Section "InputDevice"
