mask new packages

--- a/paludis/etc/package_mask.conf
+++ b/paludis/etc/package_mask.conf
@@ -348,3 +348,7 @@ media-sound/amarok:4.1
 =sys-apps/openrc-0.9.9.2
 =sys-apps/openrc-0.9.9
 =sys-apps/net-tools-1.60_p20120127084908
+=net-dns/bind-9.9.0
+#=sys-apps/openrc-0.10.2
+=sys-apps/openrc-0.10.1
+=sys-apps/openrc-0.10
