set use flag c++0x

--- a/paludis/etc/use.conf
+++ b/paludis/etc/use.conf
@@ -10,7 +10,7 @@
 */* PALUDIS_HOOKS: -* auto-patch compress-man eselect locale-purge update-eix
 */* paludis_hooks_auto-patch paludis_hooks_compress-man paludis_hooks_eselect paludis_hooks_locale-purge paludis_hooks_update-eix
 
-*/* strip -debug
+*/* strip -debug c++0x
 */* -acpi 3dnow 3dnowext mmx mmxext sse sse2 ssse3 -apm -ieee1394 -lirc lm_sensors -pcmcia -pda usb v4l v4l2
 #*/* a52 aac alsa -gstreamer -arts -esd -nas -oss -xmms -accessibility -libnotify -startup-notification -hal
 */* a52 aac alsa -gstreamer -arts -esd -nas -oss -xmms -libnotify -startup-notification -hal
