add new use flags

--- a/paludis/etc/use.conf.d/per-package.conf
+++ b/paludis/etc/use.conf.d/per-package.conf
@@ -32,7 +32,7 @@ dev-util/git -tk -webdav
 dev-vcs/subversion -kde -perl -python -berkdb webdav-neon -dso extras vim-syntax
 
 kde-base/kdm -pam
-kde-base/kopete addbookmarks alias autoreplace connectionstatus contactnotes highlight history irc latex nowlistening sametime sms statistics texteffect
+kde-base/kdelibs
 
 mail-client/mozilla-thunderbird mozcalendar
 mail-client/mutt -berkdb -crypt -debug -doc gdbm -gnutls -gpg -idn imap mbox nls nntp pop -qdbm -sasl -sidebar smime smtp ssl -vanilla
@@ -57,6 +57,7 @@ media-gfx/picasa nsplugin
 net-analyzer/trafshow -slang
 net-analyzer/wireshark gtk pcap
 net-dialup/freeradius mysql -pam
+net-dns/avahi mdnsresponder-compat qt3
 net-dns/bind resolvconf dlz caps
 net-dns/dnsmasq resolvconf
 net-misc/kamailio group_standard tls kex pv siputils auth auth_db db_mysql -debug
@@ -101,3 +102,4 @@ www-plugins/adobe-flash -32bit -multilib
 www-client/firefox -startup-notification
 www-client/lynx -ssl gnutls
 www-plugins/google-talkplugin 64bit -multilib
+media-video/mplayer2 -xscreensaver
